# minago

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  compress-memo.ods
.github/workflows/: build.yml  clang_format.yml
common/: objloader.cpp  objloader.hpp
misc/: StandardShading.fragmentshader  example.hpp  render.cpp
scripts/: run_clang-format.sh
src/: .gitignore  3d_telecom  3d_telecom.cpp  TextureFragmentShader.fragmentshader  camera  camera.cpp  camera.h  camera_main.cpp  compress.cpp  compress.h  connector.cpp  connector.h  example.hpp  eyeLike  eyeLike.cpp  eyeLike.h  eyeLikeMain.cpp  eye_like.cpp  eye_like_main.cpp  findEyeCenter.cpp  findEyeCorner.cpp  find_eye_center.cpp  find_eye_center.h  find_eye_corner.cpp  find_eye_corner.h  helpers.cpp  hyoketsu.mtl  main.cpp  minago.cpp  obj_file_loader.cpp  obj_file_loader.h  obj_file_loader_main.cpp  point-cloud-compress.cpp  render.cpp  render2.cpp  renderer.cpp  renderer.h  renderer_main.cpp  rgbd-to-3d.cpp  rgbd_to_3d.cpp  (+7 more)
src/GazeTracking/: .gitignore  example.py
users/akawashiro/: MEMO.md
